[CI] Publish Documentation for d5406b29b7d5114b82d03e44ee4e12d09bd2b4be - d5406b29b7d5114b82d03e44ee4e12d09bd2b4be 🚀

--- a/solution-pattern-template/developer-resources.html
+++ b/solution-pattern-template/developer-resources.html
@@ -167,10 +167,13 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Add link to the git repo of the code</p>
+<p><a href="https://www.redhat.com/en/engage/15-reasons-adopt-openshift-virtualization-ebook">15-reasons-adopt-openshift-virtualization-ebook</a></p>
 </li>
 <li>
-<p>Add links to whitepapers, ebooks, learning paths, product pages</p>
+<p><a href="https://docs.redhat.com/en/documentation/red_hat_service_interconnect/1.5">Red Hat Service Interconnect Documentation</a></p>
+</li>
+<li>
+<p><a href="https://developers.redhat.com/products/service-interconnect/getting-started" class="bare">https://developers.redhat.com/products/service-interconnect/getting-started</a> [Getting Started with Red hat Service Interconnect]</p>
 </li>
 </ul>
 </div>
