[CI] Publish Documentation for f27e15e668150b73b0e9d09b35b8dd33fc2d757e - f27e15e668150b73b0e9d09b35b8dd33fc2d757e 🚀

--- a/solution-pattern-template/developer-resources.html
+++ b/solution-pattern-template/developer-resources.html
@@ -173,7 +173,7 @@
 <p><a href="https://docs.redhat.com/en/documentation/red_hat_service_interconnect/1.5">Red Hat Service Interconnect Documentation</a></p>
 </li>
 <li>
-<p><a href="https://developers.redhat.com/products/service-interconnect/getting-started" class="bare">https://developers.redhat.com/products/service-interconnect/getting-started</a> [Getting Started with Red hat Service Interconnect]</p>
+<p><a href="https://developers.redhat.com/products/service-interconnect/getting-started">Getting Started with Red hat Service Interconnect</a></p>
 </li>
 </ul>
 </div>
