--- a/404.html
+++ b/404.html
@@ -57,7 +57,7 @@
 <div class="nav-panel-explore is-active" data-panel="explore">
   <ul class="components">
     <li class="component">
-      <span class="title">Template Tutorial</span>
+      <span class="title">Service Interconnect and OpenShift Virtualization</span>
       <ul class="versions">
         <li class="version">
           <a href="/solution-patterns/solution-pattern-template/index.html">master</a>
