--- a/solution-pattern-template/02-architecture.html
+++ b/solution-pattern-template/02-architecture.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Solution Pattern: Minimize downtime when migrating your applications from hypervisor based environments to OpenShift Virtualization :: Solution Patterns for Cloud Native Architectures</title>
+    <title>Solution Pattern: Minimize Downtime when Migrating from Hypervisors to OpenShift Virtualization :: Solution Patterns for Cloud Native Architectures</title>
     <link rel="canonical" href="https://redhat-solution-patterns.github.io/solution-patterns/solution-pattern-template/02-architecture.html">
     <link rel="prev" href="index.html">
     <link rel="next" href="03-demo.html">
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../_/css/site.css">
 <link rel="icon" href="../_/img/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8TP4HBLBT1"></script>
+<script>function gtag() { dataLayer.push(arguments) }; window.dataLayer = window.dataLayer || []; gtag('js', new Date()); gtag('config', 'G-8TP4HBLBT1')</script>
   </head>
   <body class="article">
 <header class="header">
@@ -118,10 +120,7 @@
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="04-conclusion.html">4. Conclusion</a>
-  </li>
-  <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="05-developer-resources.html">5. Developer Resources</a>
+    <a class="nav-link" href="04-developer-resources.html">4. Developer Resources</a>
   </li>
   <li class="nav-item" data-depth="1">
     <span class="nav-text"><a href="https://redhat-solution-patterns.github.io/solution-patterns/patterns.html" target="_blank" rel="noopener">Explore Red Hat Solution Patterns</a></span>
@@ -164,7 +163,7 @@
   </div>
   <div class="content">
 <article class="doc">
-<h1 class="page">Solution Pattern: Minimize downtime when migrating your applications from hypervisor based environments to OpenShift Virtualization</h1>
+<h1 class="page">Solution Pattern: Minimize Downtime when Migrating from Hypervisors to OpenShift Virtualization</h1>
 <h1 id="_architecture" class="sect0"><a class="anchor" href="#_architecture"></a><a class="link" href="#_architecture">Architecture</a></h1>
 <div class="openblock partintro">
 <div class="content">
